gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6-summary/step-6-summary.component.scss
@use 'sass:map';
@use '@angular/material' as mat;
@use '@gravitee/ui-particles-angular' as gio;

$typography: map.get(gio.$mat-theme, typography);

.step-6-summary {
  &__body {
    display: flex;
    flex-direction: column;
    gap: 16px;
  }

  &__badge-list {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;

    .gio-badge-accent {
      margin: 0;
    }
  }

  &__step {
    display: flex;
    border: 1px solid mat.get-color-from-palette(gio.$mat-dove-palette, 'darker10');
    border-radius: 6px;
    padding: 16px;
    flex-direction: column;

    &__body {
      display: flex;
      gap: 30px;
      align-items: center;
    }

    &__info {
      display: flex;
      flex-direction: column;
      flex: 1 1 100%;
      gap: 8px;

      &__key {
        @include mat.typography-level($typography, body-1);
        color: mat.get-color-from-palette(gio.$mat-space-palette, 'lighter40');
        align-self: center;
      }

      &__value {
        @include mat.typography-level($typography, body-2);
        color: mat.get-color-from-palette(gio.$mat-accent-palette, 'darker20');
      }
      &__row {
        display: flex;
        gap: 4px;
        flex-wrap: wrap;
      }

      &__security {
        &__content {
          display: flex;
          gap: 16px;
          &__card {
            flex: 0 0 50%;
            display: flex;
            flex-direction: column;
            border: 2px solid mat.get-color-from-palette(gio.$mat-dove-palette, 'darker20');
            border-radius: 4px;
            padding: 16px;

            &__title {
              flex: 1 1 auto;
              display: flex;
              align-items: center;
              justify-content: space-between;
            }

            &__content {
            }
          }
        }
      }
    }
  }

  &__footer {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 16px;
    margin-top: 56px;

    &__message {
      @include mat.typography-level($typography, body-1);
      color: mat.get-color-from-palette(gio.$mat-space-palette, 'lighter40');
    }
    &__actions {
      display: flex;
      gap: 8px;
    }
    &__button-icon {
      vertical-align: text-bottom;
      margin-left: 8px;
      margin-right: 0;
    }
  }
}

